--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,6 +16,10 @@ jobs:
       with:
         php-version: '8.0'
     - uses: actions/checkout@v3
+    - name: Install NPM Dependencies
+      run: npm ci
+    - name: build assets
+      run: npm run dev
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
