--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.5",
         "league/glide-laravel": "^1.0",
         "mathieutu/laravel-json-syncer": "^1.4",
-        "tightenco/ziggy": "^0.8.0"
+        "tightenco/ziggy": "^0.8.0",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
